# task-flow-back-end

./: .env  .env.example  .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 29a87e81d858_add_projects_and_project_members_tables.py  39a94a030396_add_password_to_users.py  5a3de378af1d_create_users_table.py  73948f0ca79b_drop_revoked_and_refresh_token_tables.py  7bb41b6f1472_add_updated_at_to_users.py  8bed4a55612a_add_revoked_and_refresh_token_tables.py  a61071c29147_add_activities_table.py  d09d590829ea_add_comments_table.py  e3e8e5674e24_add_tasks_table.py  e6cff3097e4c_add_notification_and_appearance_.py  ef6db227e122_add_auth_fields_to_users.py
app/: main.py
app/api/dependencies/: activities.py  activity_service.py  auth.py  comments.py  dashboard.py  db.py  projects.py  settings.py  (+3 more)
app/core/: activity_templates.py  config.py  constants.py  exception_handlers.py  exceptions.py  responses.py  security.py  utils.py
app/db/: database.py  session.py
app/models/: activity.py  comment.py  project.py  task.py  user.py
app/repositories/: activity_repository.py  comment_repository.py  project_repository.py  task_repository.py  user_repository.py
app/schemas/: activity.py  auth.py  base.py  comment.py  common.py  dashboard.py  kanban.py  project.py  settings.py  task.py  user.py
app/services/: access_control.py  activity_service.py  auth_service.py  comment_service.py  dashboard_service.py  project_service.py  settings_service.py  task_service.py  task_stats.py  user_service.py
docs/: API_ENDPOINTS.md
scripts/: create_admin.py
(+10 files in other folders)
